# self-service-operators

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  index.html  index.yaml  local-kind-cluster.sh  postgres.yaml  pre-commit  release.sh  s5-crd.yaml.bak  s5.yaml  self-service-operators-0.0.1.tgz  self-service-operators-0.0.2.tgz  self-service-operators-0.0.4.tgz  self-service-operators-0.0.5.tgz  self-service-project-crd.yaml  self-service-project-manifest.yaml  todo
.github/workflows/: ci-pipeline.yml  docker-publish.yml  release-version.yml
chart/SelfServiceProject/: Chart.yaml
chart/SelfServiceProject/templates/: manifest-secrets.yaml
chart/self-service-operators/: Chart.yaml  values.yaml
chart/self-service-operators/crds/: crd.yaml  projects.selfservice.innoq.io.yaml
chart/self-service-operators/templates/: NOTES.txt  clusterrolebinding.yaml  deployment.yaml  ingress.yaml
charts/: self-service-operators-0.0.1.tgz
charts/self-service-operators/: Chart.yaml  ssh-key-creator-sample.yaml  values.yaml
charts/self-service-operators/crds/: projects.selfservice.innoq.io.yaml
charts/self-service-operators/templates/: _helpers.tpl  deployment.yaml  manifest-secrets.yaml  serviceaccount.yaml
manifests/: default-project-manifests  project-sample.yaml  projects.selfservice.innoq.io.yaml
src/: lib.rs
src/postgres/: mod.rs  operator.rs  postgres.rs  postgres_status.rs
src/postgres/states/: create_database.rs  error.rs  mod.rs  released.rs  transitions.rs  wait_for_changes.rs
src/project/: mod.rs  operator.rs  project.rs  project_status.rs
src/project/states/: apply_manifests.rs  create_namespace.rs  error.rs  mod.rs  released.rs  transitions.rs  wait_for_changes.rs
src/self_service/: helper.rs  mod.rs  operator.rs  project.rs
src/self_service/project/: mod.rs  operator.rs  project.rs  project_status.rs
src/self_service/states/: apply_manifests.rs  create_namespace.rs  error.rs  mod.rs  released.rs  setup_rbac_permissions.rs  transitions.rs  wait_for_changes.rs
src/self_service/transitions/: apply_manifests.rs  create_namespace.rs  error.rs  mod.rs  new_project.rs  released.rs  setup_rbac_permissions.rs  wait_for_changes.rs
tests/: mod.rs  pod.yaml  self_service_project.rs  self_service_project_admission_hook.rs  self_service_project_manifest_parsing.rs  self_service_project_manifest_secrets.rs
tests/common/: mod.rs
tests/fixtures/: apply-once-resource.yaml  config-map.yaml  deployment.yaml  failing-manifest.yaml  invalid.yaml  missing-namespace-pod.yaml  namespaced_pod.yaml  pod-sa.yaml  pod.yaml  pod2.yaml  role.yaml  sa.yaml  templated-pod.yaml
tests/postgres/: mod.rs
tests/postgres/states/: create_database.rs
tests/project/: admission_webhook_tests.rs  manifest_secrets.rs  mod.rs  operator.rs  project.rs  yaml_manifest_parsing.rs
tests/project/states/: apply_manifests.rs  apply_manifests_check_provided_default_manifests.rs  error.rs  (+2 more)
tests/self_service/: admission_webhook_tests.rs  manifest_secrets.rs  mod.rs  operator.rs  project.rs  setup_rbac_permissions.rs  yaml_manifest_parsing.rs
(+63 files in other folders)
