[package]
name = "noqnoqnoq"
version = "0.1.0"
authors = ["Daniel Bornkessel <daniel.bornkessel@innoq.com>"]
edition = "2018"
description = "s5 operator"
repository = "https://gitlab.innoq.com/daniel/noqnoqnoq"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# krator-derive = "0.1.0"    # Derive macros for the Krator crate
async-trait = "0.1"
anyhow = "1.0"
tokio  = { version = "0.2", features = ["fs", "stream", "macros", "signal"] }
tokio-stream = "0.1.3"
k8s-openapi = { version = "0.10", default-features = false, features = ["v1_18"] }
kube = { version = "0.44", default-features = false, features = ["derive", "rustls-tls"] }
kube-runtime = { version= "0.44", default-features = false }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
futures = { version = "0.3", default-features = false }
kube-derive = "0.44"
chrono = "0.4"
env_logger = "0.8.3"
rand = "0.8"
clap = "3.0.0-beta.2"
schemars = "0.8.0"
pin-utils = "0.1.0"
http = "0.2.3"

[dependencies.krator] # A Kubernetes operator implementation in Rust
version = "0.1.0"
features = ["derive"]
git = "https://github.com/kesselborn/krustlet"
branch = "update-kube-and-k8s-openapi"
default-features = false

