[package]
name = "noqnoqnoq"
version = "0.1.0"
authors = ["Daniel Bornkessel <daniel.bornkessel@innoq.com>"]
edition = "2018"
description = "s5 operator"
repository = "https://gitlab.innoq.com/daniel/noqnoqnoq"
readme = "README.md"

# need this for cargo-build-dependencies`
[lib]
name = "noqnoqnoq"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
http = "0.2.3"
anyhow = "^1.0.40"
async-trait = "0.1"
chrono = "0.4"
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
futures = { version="^0.3", default-features=false }
k8s-openapi = { version="0.11", default-features=false, features=["v1_20"] }
kube = { version="0.55", default-features=false, features=["derive", "rustls-tls"] }
kube-derive = "0.55"
kube-runtime = { version="0.55", default-features=false }
log = "0.4"
pin-utils = "0.1.0"
rand = "0.8"
schemars = "0.8.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version="1.0", features=["macros", "rt-multi-thread", "time"] }
rcgen = "0.8.9"

[dependencies.krator-derive]
# path = "../krustlet/crates/krator-derive"
features = ["admission-webhook"]
version = "0.2.0"
# git = "https://github.com/deislabs/krustlet.git"
# branch = "main"

[dependencies.krator] # A Kubernetes operator implementation in Rust
version = "0.3.0"
features = ["derive-admission-webhook"]
# git = "https://github.com/deislabs/krustlet.git"
# branch = "main"
# git = "file:///Users/kesselborn/dev/innoq/krustlet"
# rev = "315cb44fb37e35736fb9a06d3eeec9896d65e9a3"
# path = "../krustlet/crates/krator"
default-features = false

[dev-dependencies]
serial_test = "*"
